--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,7 @@
   "name": "ionic",
   "app_id": "c7e69b05",
   "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  }
 }
