--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/http": "4.4.3",
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
+    "@ionic-native/camera": "^4.3.2",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
+    "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-ionic": "^2.0.1",
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
@@ -42,7 +44,8 @@
         "APP_ID": "c7e69b05",
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "auto"
-      }
+      },
+      "cordova-plugin-camera": {}
     }
   }
 }
