--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@ionic-native/base64-to-gallery": "^4.3.2",
     "@ionic-native/camera": "^4.3.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/spinner-dialog": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "cordova-base64-to-gallery": "^4.1.2",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-ionic": "^2.0.1",
+    "cordova-plugin-native-spinner": "^1.1.3",
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
@@ -48,7 +50,8 @@
         "UPDATE_METHOD": "auto"
       },
       "cordova-plugin-camera": {},
-      "cordova-base64-to-gallery": {}
+      "cordova-base64-to-gallery": {},
+      "cordova-plugin-native-spinner": {}
     }
   }
 }
