--- a/package.json
+++ b/package.json
@@ -23,15 +23,26 @@
     "@ionic-native/base64-to-gallery": "^4.3.2",
     "@ionic-native/camera": "^4.3.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/media-capture": "^4.3.3",
     "@ionic-native/spinner-dialog": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
+    "cordova-android": "^6.3.0",
     "cordova-base64-to-gallery": "^4.1.2",
+    "cordova-plugin-add-swift-support": "^1.7.0",
     "cordova-plugin-camera": "^2.4.1",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-file": "^4.3.3",
     "cordova-plugin-ionic": "^2.0.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-media-capture": "^1.4.3",
     "cordova-plugin-native-spinner": "^1.1.3",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.7.1",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -51,7 +62,16 @@
       },
       "cordova-plugin-camera": {},
       "cordova-base64-to-gallery": {},
-      "cordova-plugin-native-spinner": {}
-    }
+      "cordova-plugin-native-spinner": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-media-capture": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
