--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/base64-to-gallery": "^4.3.2",
     "@ionic-native/camera": "^4.3.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/local-notifications": "^4.3.3",
     "@ionic-native/media-capture": "^4.3.3",
     "@ionic-native/spinner-dialog": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
@@ -31,6 +32,7 @@
     "cordova-android": "^6.3.0",
     "cordova-base64-to-gallery": "^4.1.2",
     "cordova-plugin-add-swift-support": "^1.7.0",
+    "cordova-plugin-app-event": "^1.2.1",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
@@ -41,6 +43,7 @@
     "cordova-plugin-native-spinner": "^1.1.3",
     "cordova-plugin-splashscreen": "~4.0.1",
     "cordova-plugin-whitelist": "^1.3.1",
+    "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -68,7 +71,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-media-capture": {}
+      "cordova-plugin-media-capture": {},
+      "de.appplant.cordova.plugin.local-notification": {}
     },
     "platforms": [
       "android"
